# kobo-api-py

./: .gitignore  README.md  mkdocs.yml  pyproject.toml  requirements.txt
.github/workflows/: docs.yml
docs/: api.md  changelog.md  index.md  installation.md  usage.md
kobo_api/: __init__.py  kobo_client.py  models.py
site/: 404.html  index.html  objects.inv  sitemap.xml
site/api/: index.html
site/changelog/: index.html
site/installation/: index.html
site/search/: search_index.json
site/usage/: index.html
tests/: test_kobo_client.py
tests/unit_tests/: conftest.py  test_client_initialization.py  test_env_precedence.py  test_http_methods.py  test_internal_get.py  test_session_configuration.py  test_session_management.py  test_utility_methods.py
