[project]
name = "kobo-api-py"
version = "0.1.0"
description = "A Python wrapper for the KoBoToolbox API v2"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "dotenv>=0.9.9",
    "loguru>=0.7.3",
    "requests>=2.32.4",
    "requests-cache>=1.2.1",
]
license = {text = "MIT"}
authors = [
    {name = "ig-impact", email = "iyed.ghedamsi@impact-initiatives.org"}
]
maintainers = [
    {name = "ig-impact", email = "iyed.ghedamsi@impact-initiatives.org"}
]
keywords = ["kobotoolbox", "api", "survey", "data", "forms"]

[dependency-groups]
dev = [
    "pytest>=8.4.1",
    "pytest-cov>=6.2.1",
    "pytest-mock>=3.14.1",
    "responses>=0.25.8",
    "requests-mock>=1.12.1",
]
docs = [
    "mkdocs>=1.6",
    "mkdocs-material>=9.5",
    "mkdocstrings[python]>=0.25",
    "mkdocs-section-index>=0.3",
    "mkdocs-literate-nav>=0.6",
    "mkdocs-gen-files>=0.5",
]
