[project]
name = "kobo-api-py"
version = "0.1.0"
description = "A Python wrapper for the KoBoToolbox API v2"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "dotenv>=0.9.9",
    "loguru>=0.7.3",
    "requests>=2.32.4",
    "requests-cache>=1.2.1",
]
license = {text = "MIT"}
authors = [
    {name = "ig-impact", email = "iyed.ghedamsi@impact-initiatives.org"}
]
maintainers = [
    {name = "ig-impact", email = "iyed.ghedamsi@impact-initiatives.org"}
]
keywords = ["kobotoolbox", "api", "survey", "data", "forms"]

[dependency-groups]
dev = [
    "pytest>=8.4.1",
    "pytest-cov>=6.2.1",
    "pytest-mock>=3.14.1",
    "responses>=0.25.8",
    "requests-mock>=1.12.1",
    "ipdb>=0.13.13",
    "pytest-watcher>=0.4.3",
    "pytest-sugar>=1.1.0",
    "pytest-testmon>=2.1.3",
]
